@@ -43,6 +43,10 @@
 			<title>Index of new symbols in 0.1.0</title>
 			<xi:include href="xml/api-index-0.1.0.xml"><xi:fallback/></xi:include>
 		</index>
+		<index role="0.3.0">
+			<title>Index of new symbols in 0.3.0</title>
+			<xi:include href="xml/api-index-0.3.0.xml"><xi:fallback/></xi:include>
+		</index>
 		<xi:include href="xml/annotation-glossary.xml"><xi:fallback /></xi:include>
 	</part>
 </book>
